package ci.minesstienne.fr.cnformalisation.abstractmodel.general;

/**
 * @author YoucTagh
 */
public interface Constraint {
    float getRepresentationQuality(Representation representation);
}
